--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,527 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html
+  lang="en"
+  class="page"
+>
+  <!-- #region head  -->
+  <head class="page__head">
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
+    <link
+      rel="icon"
+      href="./icon/bakerlab.svg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/style.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+
+  <body class="page__body">
+    <!-- #region header-->
+    <header class="header">
+      <!-- #region top-bar  -->
+      <div class="top-bar header__top-bar">
+        <a
+          href="#"
+          class="logo"
+        >
+          <img
+            src="./icon/bakerlab.svg"
+            alt="logo"
+          />
+        </a>
+
+        <a
+          href="#header__menu"
+          class="menu--icon"
+        ></a>
+
+        <!-- #region desktop nav links -->
+        <nav class="nav header__nav">
+          <ul class="nav__list header__nav__list">
+            <li class="nav__item">
+              <a
+                href="#products"
+                class="nav__link"
+              >
+                Products
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#about-us"
+                class="nav__link"
+              >
+                About Us
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#blog"
+                class="nav__link"
+              >
+                Blog
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#contact-us"
+                class="nav__contact-us"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <!-- #endregion -->
+      </div>
+      <!-- #endregion -->
+
+      <div class="header__content container">
+        <p class="greeting__text">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+
+        <h1 class="greeting-title">Creative bakery</h1>
+
+        <a
+          href="#"
+          class="learn-more"
+        >
+          Learn more
+        </a>
+      </div>
+    </header>
+    <!-- #endregion -->
+
+    <!-- #region menu-->
+    <aside
+      class="menu header__menu"
+      id="header__menu"
+    >
+      <!-- #region menu top-bar -->
+      <div class="top-bar">
+        <a
+          href="#"
+          class="logo"
+        >
+          <img
+            src="./icon/bakerlab.svg"
+            alt="logo"
+          />
+        </a>
+
+        <a
+          href="#"
+          class="close--icon"
+        ></a>
+      </div>
+
+      <nav class="nav menu__nav">
+        <ul class="nav__list menu__nav__list">
+          <li class="nav__item menu__nav__item">
+            <a
+              href="#products"
+              class="nav__link"
+            >
+              Products
+            </a>
+          </li>
+
+          <li class="nav__item menu__nav__item">
+            <a
+              href="#about-us"
+              class="nav__link"
+            >
+              About Us
+            </a>
+          </li>
+
+          <li class="nav__item menu__nav__item">
+            <a
+              href="#blog"
+              class="nav__link"
+            >
+              Blog
+            </a>
+          </li>
+
+          <li class="nav__item menu__nav__item">
+            <a
+              href="#contact-us"
+              class="nav__contact-us"
+            >
+              Contact us
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <!-- #endregion -->
+
+    <!-- #region main-->
+    <main class="main">
+      <section
+        id="products"
+        class="products products--section container"
+      >
+        <div class="products__header">
+          <h2 class="products__title">What we bake</h2>
+
+          <p class="products__description">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+        </div>
+        <!-- #region cards  -->
+        <div class="product__card">
+          <img
+            src="./images/photo-product-1.png"
+            class="product__card__img"
+            alt="product_1"
+          />
+
+          <div class="product__card__info">
+            <h3 class="product__card__category">Cakes</h3>
+
+            <p class="product__card__description">
+              Oatmeal cookies with golden raisins, orange zest and chocolate
+              chips
+            </p>
+          </div>
+
+          <a
+            href="#"
+            class="product__card__order"
+          >
+            Order
+          </a>
+        </div>
+
+        <div class="product__card">
+          <img
+            src="./images/photo-product-2.png"
+            class="product__card__img"
+            alt="product_2"
+          />
+
+          <div class="product__card__info">
+            <h3 class="product__card__category">Cakes</h3>
+
+            <p class="product__card__description">
+              Chocolate biscuit coffee cake topped with a buttercream and powder
+            </p>
+          </div>
+
+          <a
+            href="#"
+            class="product__card__order"
+          >
+            Order
+          </a>
+        </div>
+
+        <div class="product__card product__card--3">
+          <img
+            src="./images/photo-product-3.png"
+            class="product__card__img"
+            alt="product_3"
+          />
+
+          <div class="product__card__info">
+            <h3 class="product__card__category">Donuts</h3>
+
+            <p class="product__card__description">
+              Light multi-layered croissant strewn with cinammon and almond
+              “petals”
+            </p>
+          </div>
+
+          <a
+            href="#"
+            class="product__card__order"
+          >
+            Order
+          </a>
+        </div>
+
+        <div class="product__card">
+          <img
+            src="./images/photo-product-4.png"
+            class="product__card__img"
+            alt="product_4"
+          />
+
+          <div class="product__card__info">
+            <h3 class="product__card__category">Donuts</h3>
+
+            <p class="product__card__description">
+              Light multi-layered croissant strewn with coconut and nuts
+            </p>
+          </div>
+
+          <a
+            href="#"
+            class="product__card__order"
+          >
+            Order
+          </a>
+        </div>
+
+        <div class="product__card">
+          <img
+            src="./images/photo-product-5.png"
+            class="product__card__img"
+            alt="product_5"
+          />
+
+          <div class="product__card__info">
+            <h3 class="product__card__category">Cakes</h3>
+
+            <p class="product__card__description">
+              Chocolate salted caramel, Vanilla frutti pebbles
+            </p>
+          </div>
+
+          <a
+            href="#"
+            class="product__card__order"
+          >
+            Order
+          </a>
+        </div>
+
+        <div class="product__card">
+          <img
+            src="./images/photo-product-6.png"
+            class="product__card__img"
+            alt="product_6"
+          />
+
+          <div class="product__card__info">
+            <h3 class="product__card__category">Cookies</h3>
+
+            <p class="product__card__description">
+              Oatmeal cookies with golden raisins, orange zest and chocolate
+              chips
+            </p>
+          </div>
+
+          <a
+            href="#"
+            class="product__card__order"
+          >
+            Order
+          </a>
+        </div>
+        <!-- #endregion -->
+      </section>
+
+      <section
+        id="about-us"
+        class="about-us about-us--section container"
+      >
+        <h2 class="about-us__head">
+          Few words
+          <br />
+          about us
+        </h2>
+
+        <p class="about-us__info">
+          Like many design teams, Onfido made the transition from Abstract +
+          Sketch, to Figma in the last couple of years. One of the common
+          resistance points internally before making that switch, was
+          Figma&#39;s lack of Git-style branching that Abstract enabled. The
+          design team had come to rely on branching and had built a lot of our
+          processes around it.
+        </p>
+
+        <div class="statistic">
+          <div class="statistic__block">
+            <span class="statistic__amount">2015</span>
+
+            <p class="statistic__category">Foundation year</p>
+          </div>
+
+          <div class="statistic__block">
+            <span class="statistic__amount">23</span>
+
+            <p class="statistic__category">Stores</p>
+          </div>
+
+          <div class="statistic__block">
+            <span class="statistic__amount">155</span>
+
+            <p class="statistic__category">Companies</p>
+          </div>
+
+          <div class="statistic__block">
+            <span class="statistic__amount">10K+</span>
+
+            <p class="statistic__category">Clients</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- #endregion -->
+
+    <!-- #region footer-->
+    <footer class="footer container">
+      <a
+        href="#"
+        class="logo footer__logo"
+      >
+        <img
+          src="./images/footer-logo.svg"
+          alt="logo"
+        />
+      </a>
+
+      <nav class="nav footer__nav">
+        <h3 class="footer__nav__head">Menu</h3>
+
+        <ul class="nav__list footer__nav__list">
+          <li>
+            <a
+              href="#products"
+              class="nav__link footer__nav__link"
+            >
+              Products
+            </a>
+          </li>
+          <li>
+            <a
+              href="#about-us"
+              class="nav__link footer__nav__link"
+            >
+              About Us
+            </a>
+          </li>
+          <li>
+            <a
+              href="#"
+              class="nav__link footer__nav__link"
+            >
+              Blog
+            </a>
+          </li>
+          <li>
+            <a
+              href="#"
+              class="nav__link footer__nav__link"
+            >
+              Terms & Privacy
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <h2
+        class="contact-us"
+        id="contact-us"
+      >
+        Contact us
+      </h2>
+
+      <div class="call-us">
+        <h3 class="call-us__head">Call us</h3>
+
+        <ul class="call-us__list">
+          <li>
+            <a
+              href="tel:(629) 555-0129"
+              class="call-us__link"
+            >
+              (629) 555-0129
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="tel:(603) 555-0123"
+              class="call-us__link"
+            >
+              (603) 555-0123
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="tel:(704) 555-0127"
+              class="call-us__link"
+            >
+              (704) 555-0127
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="email-us">
+        <h3 class="email-us__head">Email us</h3>
+
+        <a
+          href="mailto:bakerlab@example.com"
+          class="email-us__link"
+        >
+          bakerlab@example.com
+        </a>
+      </div>
+
+      <div class="social-link">
+        <a
+          href="https://www.facebook.com/"
+          target="_blank"
+          rel="noopener"
+          title="open facebook"
+          class="social-link__icon facebook--icon"
+        ></a>
+
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          rel="noopener"
+          title="open instagram"
+          class="social-link__icon instagram--icon"
+        ></a>
+
+        <a
+          href="https://x.com/"
+          target="_blank"
+          rel="noopener"
+          title="open x"
+          class="social-link__icon x--icon"
+        ></a>
+      </div>
+
+      <span class="footer__copyright">© Bakerlab 2022</span>
+    </footer>
+    <!-- #endregion -->
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
