--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,430 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__top-bar top-bar">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="images/icons/logo.svg"
+            alt="logo"
+            class="top-bar__logo"
+          />
+        </a>
+        <ul class="top-bar__nav nav">
+          <li class="nav__item">
+            <a
+              href="#products"
+              class="nav__link"
+            >
+              Products
+            </a>
+          </li>
+          <li class="nav__item">
+            <a
+              href="#about-us"
+              class="nav__link"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="nav__item">
+            <a
+              href="#products"
+              class="nav__link"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="nav__item">
+            <a
+              href="tel: (629) 555-0129"
+              class="nav__contact-us"
+            ></a>
+          </li>
+        </ul>
+        <a
+          href="#menu"
+          class="top-bar__menu"
+        ></a>
+      </div>
+      <div class="header__content">
+        <p class="header__info">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+        <h1 class="header__title">Creative bakery</h1>
+        <div class="header__bg-image">
+          <img
+            src="images/pictures/cookie-picture.png"
+            alt="cookie"
+            class="header__image"
+          />
+        </div>
+        <a
+          href="#about-us"
+          class="header__button"
+        >
+          Learn more
+        </a>
+      </div>
+    </header>
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="menu__top-bar top-bar">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="images/icons/logo.svg"
+            alt="logo"
+            class="top-bar__logo"
+          />
+        </a>
+        <a
+          href="#"
+          class="top-bar__close"
+        ></a>
+      </div>
+      <ul class="menu__nav nav">
+        <li class="nav__item">
+          <a
+            href="#products"
+            class="nav__link nav__link--menu"
+          >
+            Products
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#about-us"
+            class="nav__link nav__link--menu"
+          >
+            About Us
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="#products"
+            class="nav__link nav__link--menu"
+          >
+            Blog
+          </a>
+        </li>
+        <li class="nav__item">
+          <a
+            href="tel: (629) 555-0129"
+            class="nav__contact-us nav__contact-us--menu"
+          ></a>
+        </li>
+      </ul>
+    </aside>
+    <main class="main">
+      <section
+        class="main-section section-production"
+        id="products"
+      >
+        <div class="section-production__description">
+          <h2 class="section-production__title">What we bake</h2>
+          <p class="section-production__info">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+        </div>
+        <div class="section-production__cards">
+          <div class="section-production__card">
+            <div class="section-production__product product">
+              <div class="product__image-place">
+                <img
+                  src="images/pictures/cake-1.png"
+                  alt="cake=1"
+                  class="product__image"
+                />
+              </div>
+              <p class="product__title">Cakes</p>
+              <p class="product__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#contacts"
+                class="product__button"
+              ></a>
+            </div>
+            <div class="section-production__product product">
+              <div class="product__image-place">
+                <img
+                  src="images/pictures/cake-2.png"
+                  alt="cake=1"
+                  class="product__image"
+                />
+              </div>
+              <p class="product__title">Cakes</p>
+              <p class="product__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+              <a
+                href="#contacts"
+                class="product__button"
+              ></a>
+            </div>
+          </div>
+          <div
+            class="section-production__card section-production__card--to-right"
+          >
+            <div class="section-production__product product">
+              <div class="product__image-place">
+                <img
+                  src="images/pictures/donuts-1.png"
+                  alt="donuts"
+                  class="product__image"
+                />
+              </div>
+              <p class="product__title">Donuts</p>
+              <p class="product__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+              <a
+                href="#contacts"
+                class="product__button"
+              ></a>
+            </div>
+            <div class="section-production__product product">
+              <div class="product__image-place">
+                <img
+                  src="images/pictures/donuts-2.png"
+                  alt="donuts"
+                  class="product__image"
+                />
+              </div>
+              <p class="product__title">Donuts</p>
+              <p class="product__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+              <a
+                href="#contacts"
+                class="product__button"
+              ></a>
+            </div>
+          </div>
+          <div class="section-production__card">
+            <div class="section-production__product product">
+              <div class="product__image-place">
+                <img
+                  src="images/pictures/cake-3.png"
+                  alt="cake=1"
+                  class="product__image"
+                />
+              </div>
+              <p class="product__title">Cakes</p>
+              <p class="product__description">
+                Cake with chocolate salted caramel, Vanilla frutti pebbles
+                inside
+              </p>
+              <a
+                href="#contacts"
+                class="product__button"
+              ></a>
+            </div>
+            <div class="section-production__product product">
+              <div class="product__image-place">
+                <img
+                  src="images/pictures/cake-4.png"
+                  alt="cake=1"
+                  class="product__image"
+                />
+              </div>
+              <p class="product__title">Cakes</p>
+              <p class="product__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#contacts"
+                class="product__button"
+              ></a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section
+        class="main-section section-about-us"
+        id="about-us"
+      >
+        <div class="section-about-us__content">
+          <h2 class="section-about-us__title">Few words About us</h2>
+          <p class="section-about-us__description">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+        </div>
+        <div class="section-about-us__dates dates">
+          <div class="dates__date date">
+            <p class="date__number">2015</p>
+            <p class="date__info">Foundation year</p>
+          </div>
+          <div class="dates__date date">
+            <p class="date__number">23</p>
+            <p class="date__info">Stores</p>
+          </div>
+          <div class="dates__date date">
+            <p class="date__number">155</p>
+            <p class="date__info">Companies</p>
+          </div>
+          <div class="dates__date date">
+            <p class="date__number">10k+</p>
+            <p class="date__info">Clients</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="footer__content">
+        <div class="footer-top">
+          <a
+            href="#"
+            class="footer-top__logo-link"
+          >
+            <img
+              src="images/icons/logo-white.svg"
+              alt="logo"
+              class="footer-top__logo"
+            />
+          </a>
+          <ul class="footer-top__nav nav">
+            <h3 class="nav__title">Menu</h3>
+            <li class="nav__item">
+              <a
+                href="#products"
+                class="nav__link nav__link--white"
+              >
+                Products
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#about-us"
+                class="nav__link nav__link--white"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#products"
+                class="nav__link nav__link--white"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#terms"
+                class="nav__link nav__link--white"
+              >
+                Terms & Privacy
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-contacts">
+          <h2 class="footer-contacts__title">Contact us</h2>
+          <ul class="footer-contacts__nav nav">
+            <h3 class="nav__title">Call us</h3>
+            <li class="nav__item">
+              <a
+                href="tel:(629) 555-0129"
+                class="nav__link nav__link--white"
+              >
+                (629) 555-0129
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="tel:(603) 555-0123"
+                class="nav__link nav__link--white"
+              >
+                (603) 555-0123
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="tel:(704) 555-0127"
+                class="nav__link nav__link--white"
+              >
+                (704) 555-0127
+              </a>
+            </li>
+          </ul>
+          <ul class="footer-contacts__nav--email nav">
+            <h3 class="nav__title">Email us</h3>
+            <li class="nav__item">
+              <a
+                href="mailto:bakerlab@example.com"
+                class="nav__link nav__link--white"
+              >
+                bakerlab@example.com
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-bottom">
+          <div class="footer-bottom__socials socials">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="socials__link socials__link--facebook"
+            ></a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="socials__link socials__link--instagram"
+            ></a>
+            <a
+              href="https://x.com/"
+              target="_blank"
+              class="socials__link socials__link--twitter"
+            ></a>
+          </div>
+          <p
+            class="footer-bottom__license"
+            id="terms"
+          >
+            © Bakerlab 2022
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
