--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,90 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
     <script src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__top">
+        <a href="#">
+          <img
+            src="images/Logo.png"
+            alt="Bakerlab logo"
+          />
+        </a>
+
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+      </div>
+
+      <div class="header__content">
+        <p class="header__description">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+
+        <h1 class="header__title">Creative bakery</h1>
+
+        <img
+          src="/src/images/cookie-photo.png"
+          alt="Cookie photo"
+          class="header__photo"
+        />
+
+        <button class="header__button">
+          <a
+            href="#about-us"
+            class="icon icon--cookie"
+          ></a>
+          <a
+            href="#about-us"
+            class="header__button-link"
+          >
+            Learn more
+          </a>
+        </button>
+      </div>
+    </header>
+
+    <aside class="menu"></aside>
+
+    <main class="main">
+      <section class="products">
+        <h2>What we bake</h2>
+      </section>
+
+      <section class="about-us">
+        <h2>Few words About us</h2>
+      </section>
+    </main>
+
+    <footer class="footer"></footer>
   </body>
 </html>
