--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,30 @@
     <title>Title</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./main.css"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100..700&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="navigation">
+      <img
+        src="/src/images/logos/Logo.svg"
+        class="navigation-logo"
+        alt="#"
+      />
+
+      <a
+        class="navigation-burger"
+        href="#"
+      >
+        <div class="navigation-burger__icon"></div>
+      </a>
+    </div>
+    <header class="header"></header>
     <script src="scripts/main.js"></script>
   </body>
 </html>
