--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,30 @@
         <div class="navigation-burger__icon"></div>
       </a>
     </div>
-    <header class="header"></header>
+    <header class="header">
+      <p class="header__text text text__header">
+        We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+      </p>
+      <h1 class="title header__title title__header">Creative bakery</h1>
+
+      <img
+        src="./images/Cookie.jpg"
+        class="header__image image image__header"
+        alt="#"
+      />
+
+      <a
+        href="#"
+        class="header__button button button__header"
+      >
+        <img
+          src="./images/logos/cookie-icon.svg"
+          alt="#"
+          class="button__header--icon"
+        />
+        <span class="button__header--text">Learn more</span>
+      </a>
+    </header>
     <script src="scripts/main.js"></script>
   </body>
 </html>
