--- a/src/index.html
+++ b/src/index.html
@@ -18,21 +18,27 @@
     />
   </head>
   <body>
-    <div class="navigation">
-      <img
-        src="/src/images/logos/Logo.svg"
-        class="navigation-logo"
-        alt="#"
-      />
-
-      <a
-        class="navigation-burger"
-        href="#"
+    <header
+      class="header"
+      id="header"
+    >
+      <div
+        class="navigation"
+        id="navigation"
       >
-        <div class="navigation-burger__icon"></div>
-      </a>
-    </div>
-    <header class="header">
+        <img
+          src="/src/images/logos/Logo.svg"
+          class="navigation-logo"
+          alt="#"
+        />
+
+        <a
+          class="navigation-burger"
+          href="#menu"
+        >
+          <div class="navigation-burger__icon"></div>
+        </a>
+      </div>
       <p class="header__text text text__header">
         We bake your fantasies — croissants, cakes, cookies, and cupcakes.
       </p>
@@ -56,6 +62,31 @@
         <span class="button__header--text">Learn more</span>
       </a>
     </header>
+    <div
+      class="menu"
+      id="menu"
+    >
+      <div class="navigation menu__navigation">
+        <img
+          src="/src/images/logos/Logo.svg"
+          class="navigation-logo"
+          alt="#"
+        />
+
+        <a
+          class="navigation-close"
+          href="#"
+        >
+          <div class="navigation-close">
+            <img
+              src="/src/images/logos/close.svg"
+              alt="#"
+              class="navigation-close__icon"
+            />
+          </div>
+        </a>
+      </div>
+    </div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
