menu ,linkg, header done

--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,48 @@
           </div>
         </a>
       </div>
+
+      <nav class="links menu__links links__menu">
+        <ul class="links__menu--ul">
+          <li class="links__menu--li">
+            <a
+              href="products"
+              class="links__menu--link"
+            >
+              Products
+            </a>
+          </li>
+          <li class="links__menu--li">
+            <a
+              href="about-us"
+              class="links__menu--link"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="links__menu--li">
+            <a
+              href="blog"
+              class="links__menu--link"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="links__menu--li">
+            <a
+              href="#contact-us"
+              class="links__menu--link links__menu--contact"
+            >
+              <img
+                src="/src/images/logos/Icon-phone.svg"
+                alt="#"
+                class="links__menu--icon icons icons__phone"
+              />
+              <span class="links__menu--text">CONTACT US</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <script src="scripts/main.js"></script>
   </body>
