--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,495 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakery</title>
+    <link
+      rel="icon"
+      href="images/cookie.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header-header">
+        <div class="header__top">
+          <a
+            href="#"
+            class="logo-link"
+          >
+            <img
+              src="../src/images/logo.png"
+              alt="logo"
+              class="logo"
+            />
+          </a>
+          <a
+            href="#menu"
+            class="header__menu"
+          >
+            <img
+              src="../src/images/icon-menu.png"
+              class="icon__menu"
+              alt="burger menu"
+            />
+          </a>
+        </div>
+        <div class="header__top-bar">
+          <div class="top-bar__content">
+            <a
+              href="#products"
+              class="top-bar__link"
+            >
+              <h2 class="top-bar__title">Products</h2>
+            </a>
+          </div>
+          <div class="top-bar__content">
+            <a
+              href="#about"
+              class="top-bar__link"
+            >
+              <h2 class="top-bar__title">About Us</h2>
+            </a>
+          </div>
+          <div class="top-bar__content">
+            <a
+              href="#blog"
+              class="top-bar__link"
+            >
+              <h2 class="top-bar__title">Blog</h2>
+            </a>
+          </div>
+          <div class="top-bar__content">
+            <a
+              href="#contact"
+              class="top-bar__link-contact"
+            >
+              <img
+                src="../src/images/Icon-phone.png"
+                class="icon-phone"
+                alt="icon phone"
+              />
+              <h2 class="top-bar__title-contact">Contact us</h2>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div
+      class="menu"
+      id="menu"
+    >
+      <div class="menu__container">
+        <div class="menu__top">
+          <img
+            src="../src/images/logo.png"
+            alt="logo"
+            class="logo"
+          />
+          <a
+            href="#"
+            class="close__menu"
+          >
+            <img
+              src="../src/images/icon-close.png"
+              class="icon__close"
+              alt="close menu"
+            />
+          </a>
+        </div>
+        <div class="menu__content">
+          <a
+            href="#products"
+            class="menu__link"
+          >
+            <h2 class="menu__title">Products</h2>
+          </a>
+        </div>
+        <div class="menu__content">
+          <a
+            href="#about"
+            class="menu__link"
+          >
+            <h2 class="menu__title">About Us</h2>
+          </a>
+        </div>
+        <div class="menu__content">
+          <a
+            href="#blog"
+            class="menu__link"
+          >
+            <h2 class="menu__title">Blog</h2>
+          </a>
+        </div>
+        <div class="menu__content">
+          <a
+            href="#contact"
+            class="menu__link-contact"
+          >
+            <img
+              src="../src/images/Icon-phone.png"
+              class="icon-phone"
+              alt="icon phone"
+            />
+            <h2 class="menu__title-contact">Contact us</h2>
+          </a>
+        </div>
+      </div>
+    </div>
+    <section class="blog">
+      <div class="blog__content">
+        <p class="blog__subtitle">
+          We bake your fantasies croissants, cakes, cookies, and cupcakes.
+        </p>
+
+        <div class="blog__title-wrapper">
+          <h1 class="blog__title">CREATIVE BAKERY</h1>
+          <img
+            src="../src/images/cookie.png"
+            alt="cookie"
+            class="blog__cookie-img"
+          />
+        </div>
+
+        <a
+          href="#about"
+          class="blog__button"
+        >
+          <span class="button__text">Learn more</span>
+        </a>
+      </div>
+    </section>
+    <section
+      class="products"
+      id="products"
+    >
+      <h2 class="products__title">What we bake</h2>
+      <h3 class="products__text">
+        We can customize our cookies right for your needs. Just imagine it
+      </h3>
+      <div class="products__cards">
+        <div class="product-card">
+          <img
+            src="../src/images/Photo.png"
+            alt="product photo"
+            class="product__img"
+          />
+          <h4 class="product__title">Cakes</h4>
+          <div class="product__text">
+            Oatmeal cookies with golden raisins, orange zest and chocolate chips
+          </div>
+          <button class="product__button">
+            <a
+              href="#contact"
+              class="button__order"
+            >
+              <img
+                src="../src/images/icon-vector.png"
+                class="icon-vector"
+                alt="icon vector"
+              />
+              <span>order</span>
+            </a>
+          </button>
+        </div>
+        <div class="product-card">
+          <img
+            src="../src/images/Photo (1).png"
+            alt="product photo 2"
+            class="product__img"
+          />
+          <h4 class="product__title">Cakes</h4>
+          <div class="product__text">
+            Chocolate biscuit coffee cake topped with a buttercream and powder
+          </div>
+          <button class="product__button">
+            <a
+              href="#contact"
+              class="button__order"
+            >
+              <img
+                src="../src/images/icon-vector.png"
+                class="icon-vector"
+                alt="icon vector"
+              />
+              <span>order</span>
+            </a>
+          </button>
+        </div>
+        <div class="product-card">
+          <img
+            src="../src/images/Photo (2).png"
+            alt="product photo 3"
+            class="product__img"
+          />
+          <h4 class="product__title">Donuts</h4>
+          <div class="product__text">
+            Light multi-layered croissant strewn with cinammon and almond
+            “petals”
+          </div>
+          <button class="product__button">
+            <a
+              href="#contact"
+              class="button__order"
+            >
+              <img
+                src="../src/images/icon-vector.png"
+                class="icon-vector"
+                alt="icon vector"
+              />
+              <span>order</span>
+            </a>
+          </button>
+        </div>
+        <div class="product-card">
+          <img
+            src="../src/images/Photo (3).png"
+            alt="product photo 4"
+            class="product__img"
+          />
+          <h4 class="product__title">Donuts</h4>
+          <div class="product__text">
+            Light multi-layered croissant strewn with coconut and nuts
+          </div>
+          <button class="product__button">
+            <a
+              href="#contact"
+              class="button__order"
+            >
+              <img
+                src="../src/images/icon-vector.png"
+                class="icon-vector"
+                alt="icon vector"
+              />
+              <span>order</span>
+            </a>
+          </button>
+        </div>
+        <div class="product-card">
+          <img
+            src="../src/images/Photo (4).png"
+            alt="product photo 5"
+            class="product__img"
+          />
+          <h4 class="product__title">Cakes</h4>
+          <div class="product__text">
+            Cake with chocolate salted caramel, Vanilla frutti pebbles inside
+          </div>
+          <button class="product__button">
+            <a
+              href="#contact"
+              class="button__order"
+            >
+              <img
+                src="../src/images/icon-vector.png"
+                class="icon-vector"
+                alt="icon vector"
+              />
+              <span>order</span>
+            </a>
+          </button>
+        </div>
+        <div class="product-card">
+          <img
+            src="../src/images/Photo (5).png"
+            alt="product photo 6"
+            class="product__img"
+          />
+          <h4 class="product__title">Cookies</h4>
+          <div class="product__text">
+            Oatmeal cookies with golden raisins, orange zest and chocolate chips
+          </div>
+          <button class="product__button">
+            <a
+              href="#contact"
+              class="button__order"
+            >
+              <img
+                src="../src/images/icon-vector.png"
+                class="icon-vector"
+                alt="icon vector"
+              />
+              <span>order</span>
+            </a>
+          </button>
+        </div>
+      </div>
+    </section>
+    <section
+      class="about"
+      id="about"
+    >
+      <div class="about__us">
+        <div class="about__us-title">
+          <h2 class="about__title">Few words About us</h2>
+          <h3 class="about__text">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </h3>
+        </div>
+        <div class="about__numbers">
+          <div class="about__card">
+            <h4 class="about__number">2015</h4>
+            <h5 class="about__number__title">Foundation year</h5>
+          </div>
+          <div class="about__card">
+            <h4 class="about__number">23</h4>
+            <h5 class="about__number__title">Stores</h5>
+          </div>
+          <div class="about__card">
+            <h4 class="about__number">155</h4>
+            <h5 class="about__number__title">Companies</h5>
+          </div>
+          <div class="about__card">
+            <h4 class="about__number">10K+</h4>
+            <h5 class="about__number__title">Clients</h5>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__menu">
+          <a
+            href="#"
+            class="footer__logo"
+          >
+            <img
+              src="../src/images/Bakerlab.png"
+              class="logo__bottom"
+              alt="logo"
+            />
+          </a>
+          <div class="footer__content">
+            <h2 class="footer__title-menu">MENU</h2>
+            <a
+              href="#products"
+              class="footer__link"
+            >
+              <h2 class="footer__title">Products</h2>
+            </a>
+          </div>
+          <div class="footer__content">
+            <a
+              href="#about"
+              class="footer__link"
+            >
+              <h2 class="footer__title">About Us</h2>
+            </a>
+          </div>
+          <div class="footer__content">
+            <a
+              href="#blog"
+              class="footer__link"
+            >
+              <h2 class="footer__title">Blog</h2>
+            </a>
+          </div>
+          <div class="footer__content">
+            <a
+              href="#contact"
+              class="footer__link"
+            >
+              <h2 class="footer__title">Terms & Privacy</h2>
+            </a>
+          </div>
+        </div>
+        <div
+          class="footer__contact"
+          id="contact"
+        >
+          <h2 class="footer__contact-us">CONTACT US</h2>
+          <div class="footer__contact-title">
+            <div class="footer__phones">
+              <h3 class="footer__phone">Call us</h3>
+              <a
+                href="tel:6295550129"
+                class="footer-phone"
+              >
+                <h4 class="footer__number">(629) 555-0129</h4>
+              </a>
+              <a
+                href="tel:6035550123"
+                class="footer-phone"
+              >
+                <h4 class="footer__number">(603) 555-0123</h4>
+              </a>
+              <a
+                href="tel:7045550127"
+                class="footer-phone"
+              >
+                <h4 class="footer__number">(704) 555-0127</h4>
+              </a>
+            </div>
+            <div class="footer__email">
+              <h3 class="footer__mail">Email us</h3>
+              <a
+                href="maito:bakerlab@example.com"
+                class="footer-mail"
+              >
+                <h4 class="footer__mail-us">bakerlab@example.com</h4>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__socials">
+        <div class="social__logos">
+          <a
+            href="http://www.facebook.com"
+            class="social__logo"
+          >
+            <img
+              src="../src/images/Icon-facebook.png"
+              class="icon__bottom"
+              alt="icon facebook"
+            />
+          </a>
+          <a
+            href="http://www.instagram.com"
+            class="social__logo"
+          >
+            <img
+              src="../src/images/Icon-instagram.png"
+              class="icon__bottom"
+              alt="icon instagram"
+            />
+          </a>
+          <a
+            href="http://twitter.com"
+            class="social__logo"
+          >
+            <img
+              src="../src/images/Icon-twitter.png"
+              class="icon__bottom"
+              alt="icon twitter"
+            />
+          </a>
+        </div>
+        <div class="design">
+          <h5 class="footer__design">© Bakerlab 2022</h5>
+        </div>
+      </div>
+    </footer>
+    <h1></h1>
     <script src="scripts/main.js"></script>
   </body>
 </html>
