--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
     <section class="blog">
       <div class="blog__content">
         <p class="blog__subtitle">
-          We bake your fantasies croissants, cakes, cookies, and cupcakes.
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
         </p>
 
         <div class="blog__title-wrapper">
