--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Title</title>
     <link
       rel="stylesheet"
-      href="./main.css"
+      href="./index.css"
     />
 
     <link
@@ -129,6 +129,152 @@
         </ul>
       </nav>
     </div>
+
+    <main class="main">
+      <h2 class="title main__title title__main">What we bake</h2>
+      <p class="text main__text text__main">
+        We can customize our cookies right for your needs. Just imagine it
+      </p>
+      <div class="main__product product product__1">
+        <img
+          src="./images/Products1.jpg"
+          class="main__image image image__main"
+          alt="#"
+        />
+
+        <h3 class="product__title title title__product">Cakes</h3>
+        <p class="product__text text text__product">
+          Oatmeal cookies with golden raisins, orange zest and chocolate chips
+        </p>
+        <a
+          href="#"
+          class="button button__product"
+        >
+          <img
+            src="./images/logos/icon-arrow.svg"
+            alt="#"
+            class="button__product--icon button__product"
+          />
+          <span class="button__product--text">ORDER</span>
+        </a>
+      </div>
+      <div class="main__product product product__2">
+        <img
+          src="./images/Products2.jpg"
+          class="main__image image image__main"
+          alt="#"
+        />
+
+        <h3 class="product__title title title__product">Cakes</h3>
+        <p class="product__text text text__product">
+          Chocolate biscuit coffee cake topped with a buttercream and powder
+        </p>
+        <a
+          href="#"
+          class="button button__product"
+        >
+          <img
+            src="./images/logos/icon-arrow.svg"
+            alt="#"
+            class="button__product--icon button__product"
+          />
+          <span class="button__product--text">ORDER</span>
+        </a>
+      </div>
+      <div class="main__product product product__3">
+        <img
+          src="./images/Products3.jpg"
+          class="main__image image image__main"
+          alt="#"
+        />
+
+        <h3 class="product__title title title__product">Donuts</h3>
+        <p class="product__text text text__product">
+          Light multi-layered croissant strewn with cinammon and almond “petals”
+        </p>
+        <a
+          href="#"
+          class="button button__product"
+        >
+          <img
+            src="./images/logos/icon-arrow.svg"
+            alt="#"
+            class="button__product--icon button__product"
+          />
+          <span class="button__product--text">ORDER</span>
+        </a>
+      </div>
+      <div class="main__product product product__4">
+        <img
+          src="./images/Products4.jpg"
+          class="main__image image image__main"
+          alt="#"
+        />
+
+        <h3 class="product__title title title__product">Donuts</h3>
+        <p class="product__text text text__product">
+          Light multi-layered croissant strewn with coconut and nuts
+        </p>
+        <a
+          href="#"
+          class="button button__product"
+        >
+          <img
+            src="./images/logos/icon-arrow.svg"
+            alt="#"
+            class="button__product--icon button__product"
+          />
+          <span class="button__product--text">ORDER</span>
+        </a>
+      </div>
+      <div class="main__product product product__5">
+        <img
+          src="./images/Products5.jpg"
+          class="main__image image image__main"
+          alt="#"
+        />
+
+        <h3 class="product__title title title__product">Cakes</h3>
+        <p class="product__text text text__product">
+          Chocolate salted caramel, Vanilla frutti pebbles
+        </p>
+        <a
+          href="#"
+          class="button button__product"
+        >
+          <img
+            src="./images/logos/icon-arrow.svg"
+            alt="#"
+            class="button__product--icon button__product"
+          />
+          <span class="button__product--text">ORDER</span>
+        </a>
+      </div>
+      <div class="main__product product product__6">
+        <img
+          src="./images/Products6.jpg"
+          class="main__image image image__main"
+          alt="#"
+        />
+
+        <h3 class="product__title title title__product">Cookies</h3>
+        <p class="product__text text text__product">
+          Oatmeal cookies with golden raisins, orange zest and chocolate chips
+        </p>
+        <a
+          href="#"
+          class="button button__product"
+        >
+          <img
+            src="./images/logos/icon-arrow.svg"
+            alt="#"
+            class="button__product--icon button__product"
+          />
+          <span class="button__product--text">ORDER</span>
+        </a>
+      </div>
+    </main>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
