--- a/src/index.html
+++ b/src/index.html
@@ -447,7 +447,7 @@
             <div class="footer__email">
               <h3 class="footer__mail">Email us</h3>
               <a
-                href="maito:bakerlab@example.com"
+                href="mailto:bakerlab@example.com"
                 class="footer-mail"
               >
                 <h4 class="footer__mail-us">bakerlab@example.com</h4>
@@ -494,7 +494,6 @@
         </div>
       </div>
     </footer>
-    <h1></h1>
     <script src="scripts/main.js"></script>
   </body>
 </html>
